gnutls26 (2.12.7-2) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * Stop shipping libtool la files.

 -- Andreas Metzler <ametzler@debian.org>  Sun, 19 Jun 2011 09:16:30 +0200

gnutls26 (2.12.7-1) experimental; urgency=low

  * New upstream version.
  * Update 17_ignoretestsuitteerrors.diff.
  * A new version of pokerth has been uploaded to sid, update libgnutls26
    Breaks accordingly.

 -- Andreas Metzler <ametzler@debian.org>  Sun, 19 Jun 2011 08:49:01 +0200

gnutls26 (2.12.6.1-1) experimental; urgency=low

  * New upstream version.
  * Bump shlibs, global_set_time_function() was added.
  * Stop setting CFLAGS += -Wall, it is set by default again.
  * [17_ignoretestsuitteerrors.diff] Ignore two (not serious) testsuite
    errors.

 -- Andreas Metzler <ametzler@debian.org>  Sun, 05 Jun 2011 13:18:50 +0200

gnutls26 (2.12.5-1) experimental; urgency=low

  * New upstream version.
  * Bump shlibs, gnutls_x509_crq_verify() was added.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 14 May 2011 13:21:12 +0200

gnutls26 (2.12.4-1) experimental; urgency=low

  * New upstream version.
  * Bump shlibs. (gnutls_certificate_get_issuer() added).

 -- Andreas Metzler <ametzler@debian.org>  Sun, 08 May 2011 15:19:18 +0200

gnutls26 (2.12.3-1) experimental; urgency=low

  * New upstream version.
  * Drop patches included upstream: [18_restoreHMAC-MD5.diff]

 -- Andreas Metzler <ametzler@debian.org>  Fri, 22 Apr 2011 18:26:11 +0200

gnutls26 (2.12.2-2) experimental; urgency=low

  * [18_restoreHMAC-MD5.diff], pulled from upstream git, restore HMAC-MD5
    for compatibility. Closes: #623001

 -- Andreas Metzler <ametzler@debian.org>  Sun, 17 Apr 2011 15:44:30 +0200

gnutls26 (2.12.2-1) experimental; urgency=low

  * New upstream version.
  * [lintian] Drop article from short package descriptions.

 -- Andreas Metzler <ametzler@debian.org>  Fri, 08 Apr 2011 19:36:27 +0200

gnutls26 (2.12.1-1) experimental; urgency=low

  * New upstream version.