@@ -1,2 +1,2 @@
-debian/tmp/usr/lib/libguile-gnutls*.so* usr/lib
-debian/tmp/usr/share/guile/site usr/share/guile
+debian/tmp/usr/lib/*/libguile-gnutls*.so*
+debian/tmp/usr/share/guile/site
