@@ -1,6 +1,6 @@
-debian/tmp/usr/include/* usr/include
-debian/tmp/usr/lib/libgnutls*.so usr/lib
-debian/tmp/usr/lib/libgnutls*.a usr/lib
-debian/tmp/usr/lib/pkgconfig/gnutls.pc usr/lib/pkgconfig
-debian/tmp/usr/lib/pkgconfig/gnutls-extra.pc usr/lib/pkgconfig
+debian/tmp/usr/include/*
+debian/tmp/usr/lib/*/libgnutls*.so
+debian/tmp/usr/lib/*/libgnutls*.a
+debian/tmp/usr/lib/*/pkgconfig/gnutls.pc
+debian/tmp/usr/lib/*/pkgconfig/gnutls-extra.pc
 
