@@ -1,1 +1,1 @@
-debian/tmp/usr/lib/libgnutls-openssl.so.* usr/lib
+debian/tmp/usr/lib/*/libgnutls-openssl.so.*
