@@ -1,3 +1,3 @@
-debian/tmp/usr/lib/libgnutls.so.* usr/lib
-debian/tmp/usr/lib/libgnutls-e*.so.* usr/lib
-debian/tmp/usr/share/locale/* /usr/share/locale
+debian/tmp/usr/lib/*/libgnutls.so.*
+debian/tmp/usr/lib/*/libgnutls-e*.so.*
+debian/tmp/usr/share/locale/*
