@@ -1,1 +1,1 @@
-debian/tmp/usr/lib/libgnutlsxx.so.* usr/lib
+debian/tmp/usr/lib/*/libgnutlsxx.so.*
