@@ -4,7 +4,14 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
-DEB_CONFIGURE_EXTRA_FLAGS = --enable-ld-version-script --enable-cxx --without-lzo --enable-guile --with-guile-site-dir=/usr/share/guile/site --cache-file=$(CURDIR)/config.cache --with-libgcrypt --with-packager=Debian --with-packager-bug-reports=http://bugs.debian.org.org/ --with-packager-version="$(DEB_VERSION)"
+DEB_CONFIGURE_EXTRA_FLAGS = --enable-ld-version-script --enable-cxx \
+	--without-lzo --enable-guile \
+	--with-guile-site-dir=/usr/share/guile/site \
+	--cache-file=$(CURDIR)/config.cache --with-libgcrypt \
+	--with-packager=Debian \
+	--with-packager-bug-reports=http://bugs.debian.org.org/ \
+	--with-packager-version="$(DEB_VERSION)" \
+	--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
 DEB_MAKE_CHECK_TARGET = check
 DEB_DH_MAKESHLIBS_ARGS_libgnutls26 := -V 'libgnutls26 (>= 2.12.6.1-0)'
 DEB_DH_MAKESHLIBS_ARGS_guile-gnutls := -V 'guile-gnutls (>= 2.12.6.1-0)'
