@@ -2,6 +2,9 @@ gnutls26 (2.12.7-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * Stop shipping libtool la files.
+  * Convert to multi-arch. (Partial merge from Ubuntu 2.10.5-1ubuntu2):
+    + configure with --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH), update
+      *.install accordingly.
 
  -- Andreas Metzler <ametzler@debian.org>  Sun, 19 Jun 2011 09:16:30 +0200
 
